--- a/000_CSS.html
+++ b/000_CSS.html
@@ -49,10 +49,10 @@
         <div class="hero-unit">
           <div class="col-xs-9">
             <h3>CSS</h3>
-            <p><p>This is the introduction to CSS (cascading style sheets). 
-A CSS file allows you to separate your website&#39;s markup content from its style. 
-As always you use your HTML file to arrange the content, 
-but all of the presentation (fonts, colors, background, borders, text formatting, link effects &amp; so on…) 
+            <p><p>This is the introduction to CSS (cascading style sheets). A CSS file allows 
+you to separate your website&#39;s markup content from its style. As always you 
+use your HTML file to arrange the content, but all of the presentation 
+(fonts, colors, background, borders, text formatting, link effects &amp; so on…) 
 are accomplished within a CSS file.</p>
 </p>
           </div>
@@ -86,7 +86,7 @@ are accomplished within a CSS file.</p>
         <section class="task">
 
           <h3>Selectors</h3>
-          <p><p>In order for CSS to work you first need to specify which element you wish to apply CSS to. You do this with &#39;selectors&#39;. Selectors are essentially just names for the things you want to target and affect. Within the {brackets} of selectors you place the effects you want to apply. In this assignment we want you to create selectors.</p>
+          <p><p>In order for CSS to work you first need to specify which element you wish  to apply CSS to. You do this with &#39;selectors&#39;. Selectors are essentially  just names for the things you want to target and affect. Within the  {brackets} of selectors you place the effects you want to apply. In this  assignment we want you to create selectors.</p>
 </p>
 
           <h5>Instructions</h5>
@@ -102,7 +102,7 @@ are accomplished within a CSS file.</p>
           <h5>Resources</h5>
           <ul>
             <li>
-              <p>Mozilla Developer Network: <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Getting_started/Selectors">CSS selectors</a></p>
+              <p>Mozilla Developer Network: <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/ Getting_started/Selectors">CSS selectors</a></p>
             </li>
             <li>
               <p>Simple CSS Flat Design Container: <a href="http://youtu.be/irZ1ZMImZfg">CSS Container</a></p>
@@ -112,7 +112,7 @@ are accomplished within a CSS file.</p>
         <section class="task">
 
           <h3>Colors</h3>
-          <p><p>Colors give life to a page.  Black and white may be minimalistic and sleek, but the possibilities that arise when you add, say, 50 shades of grey, add so much to a website. This article focuses mainly on background color, but the principles can also be applied to text color. Color a text and background for this assignment.</p>
+          <p><p>Colors give life to a page. Black and white may be minimalistic and sleek,  but the possibilities that arise when you add, say, 50 shades of grey, add  so much to a website. This article focuses mainly on background color, but  the principles can also be applied to text color. Color a text and  background for this assignment.</p>
 </p>
 
           <h5>Instructions</h5>
@@ -128,7 +128,7 @@ are accomplished within a CSS file.</p>
           <h5>Resources</h5>
           <ul>
             <li>
-              <p>Mozilla Developer Network: <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/background-color">Background Color</a></p>
+              <p>Mozilla Developer Network: <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/ background-color">Background Color</a></p>
             </li>
             <li>
               <p>W3C Schools: <a href="http://www.w3schools.com/html/html_colorvalues.asp">Hexidecimal Color Code</a></p>
@@ -141,7 +141,7 @@ are accomplished within a CSS file.</p>
         <section class="task">
 
           <h3>CSS Fonts</h3>
-          <p><p>CSS also allows programmers to change the font on your webpage, or even include all the fonts. You can include custom fonts, but for some of them you have to pay. Nevertheless, you will probably grow font of the possibilities you already possess. Add cool fonts to your webpage.</p>
+          <p><p>CSS also allows programmers to change the font on your webpage, or even  include all the fonts. You can include custom fonts, but for some of them  you have to pay. Nevertheless, you will probably grow font of the  possibilities you already possess. Add cool fonts to your webpage.</p>
 </p>
 
           <h5>Instructions</h5>
