--- a/000_City_Walk.html
+++ b/000_City_Walk.html
@@ -66,8 +66,8 @@ tutorials. Read on to find out how exactly you are going to do that.</p>
           <h3>Citywalk</h3>
           <p><p>You must go out in the city of Amsterdam and follow one of the two 
 routes below. If you want, you can also follow both routes, but that&#39;s up 
-to you. While you are taking your walk, take pictures of things you think are 
-interesting; as many as you like. The purpose of this odd request is to 
+to you. While you are taking your walk, take pictures of things you think 
+are interesting; as many as you like. The purpose of this odd request is to 
 encourage you to make content, which you are going to use in this and later 
 assignments.</p>
 </p>
