--- a/001_Dev_Tools.html
+++ b/001_Dev_Tools.html
@@ -48,8 +48,9 @@
       <div class="container">
         <div class="hero-unit">
           <div class="col-xs-9">
-            <h3>{{ title }}</h3>
-            <p>{{{markdown description.full}}}</p>
+            <h3>Dev Tools</h3>
+            <p><p>A very important tool to know is the dev tools in browsers. It is used for many things like bugtesting or experimenting. You can also use it to see things like the perfomance of the site. You can view your html, css and script combined, and you can actively interact with it. Google has a very nice implementation of these, which is one of the reasons why we use chrome as a browser.</p>
+</p>
           </div>
         </div>
       </div>
@@ -57,33 +58,55 @@
 
 
     <div class="container">
-      {{#each tasks}}
         <section class="task">
 
-          <h3>{{title}}</h3>
-          {{#if description}}
-          <p>{{{markdown description}}}</p>
-          {{/if}}
+          <h3>Opening Chrome Dev-Tools</h3>
+          <p><p>Get a feel for what the Dev Tools can do. Navigate all of its tools a bit and try some stuff out.</p>
+</p>
 
           <h5>Instructions</h5>
           <ul>
-            {{#each instructions}}
-            <li><p>{{{markdown this}}}</p></li>
-            {{/each}}
+            <li><p><p>Open the tools (right-click inspect or Mac:alt+apple+i Windows:ctrl+shift+j)</p>
+</p></li>
+            <li><p><p>Inspect your document</p>
+</p></li>
           </ul>
 
-          {{#if resources}}
           <h5>Resources</h5>
           <ul>
-            {{#each resources}}
             <li>
-              <p>{{#if site}}{{site.name}}: {{/if}}<a href="{{url}}">{{title}}</a></p>
+              <p>Chrome on Dev Tools: <a href="https://developer.chrome.com/devtools">Chrome on Dev Tools</a></p>
             </li>
-            {{/each}}
           </ul>
-          {{/if}}
         </section>
-      {{/each}}
+        <section class="task">
+
+          <h3>Changing CSS in Dev Tools</h3>
+          <p><p>Dev-Tools are a great way to test out some css and see it rendered right away. Often you will run into styling not showing up because you made a little syntax error. The console allows you to quickly change a bunch of things.</p>
+</p>
+
+          <h5>Instructions</h5>
+          <ul>
+          </ul>
+
+        </section>
+        <section class="task">
+
+          <h3>Using the Javascript Console</h3>
+          <p><p>The console is a useful tool to test out little bits of code in conjuntion with your site. You can test very simple commands or do complex debugging. Your website can output to the console. If you for instance add a console.log(&quot;hello&quot;), it will show up here.</p>
+</p>
+
+          <h5>Instructions</h5>
+          <ul>
+            <li><p><p>Do some basic calculations in the console (for instance 1+1)</p>
+</p></li>
+            <li><p><p>Try console.log(&quot;something&quot;)</p>
+</p></li>
+            <li><p><p>Create a simple variable (type - var name = &quot;Your Name&quot;) (and call it with - name)</p>
+</p></li>
+          </ul>
+
+        </section>
     </div>
 
 
